projects/static/style.css
@font-face {
    font-family: "Amstelvar";
    src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2729/AmstelvarAlpha-VF.ttf")
      format("truetype");
}

.heading {
    width: 100%;
    text-align: left;
    padding: none;
    border: none;
}

.aligned {
    flex-direction: row;
    flex-wrap: nowrap;
    
}


.row {
    border: none;
}

.intro {
    font-size: 15pt;
}

.label {
    font-size: 13pt; 
}

.result .image {
    max-width: 250px;
    height: 250px;
    background-image: url("test.jpg");
    background-size: cover;
    background-position: center;
}

.result .text {
    background-color: rgb(237, 237, 237);
    font-weight: 700;
    padding: 10px 0px 10px 0px;
}


.result {
    width: 33%px;
    height: 300px;
    text-align: center;
}

.box {
    color: rgb(237, 237, 237);
    border: none;
    border-radius: 10px;
    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
    transition: all 0.3s ease 0s;
    cursor: pointer;
    outline: none;
    margin-left: 10px;
    width: 170px;
    font-family: 'Roboto', 'sans-serif';
    font-size: 10pt; 
    text-align: center;
    background-color:rgba(8, 0, 113, 0.4)
}

.buttons {
    width: 100px;
    height: 45px;
    font-family: 'Roboto', sans-serif;
    font-size: 11px;
    text-transform: uppercase;
    letter-spacing: 2.5px;
    font-weight: 500;
    color: rgb(243, 239, 22);
    background-color: rgb(19, 237, 110);
    border: none;
    border-radius: 45px;
    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
    transition: all 0.3s ease 0s;
    cursor: pointer;
    outline: none;
    margin-left: 10px;
}

.buttons:hover {
    background-color: #2EE59D;
    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
    color: #fff;
    transform: translateY(-3px);
}

.grid-container {
    display: grid;
    grid-template-columns: auto auto auto;
    /*grid-template-rows: auto auto auto; */
    gap: 50px 10px;
    height: 507px;

}

#uploadedImg {
    height: 350px;
}

.lds-dual-ring {
    visibility: hidden;
    display: inline-block;
    width: 80px;
    height: 80px;
  }
  .lds-dual-ring:after {
    content: " ";
    display: block;
    width: 32px;
    height: 32px;
    margin: 0px;
    margin-left: 24px;
    border-radius: 50%;
    border: 6px solid #000000;
    border-color:  #000000 transparent  #606c76 transparent;
    animation: lds-dual-ring 1.2s linear infinite;
  }
  @keyframes lds-dual-ring {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }
  
  h1 {
    font-family: "Roboto", sans-serif;
    font-size: 30pt;
    text-align: center;
    display: inline-block;
    background: linear-gradient(to right, #ffffff, #ffffff);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }
  
  
  .intro {
    font-size: 15pt;
    text-align: left;
    color:rgb(237, 237, 237)
  }
  
  div {
    font-family: "Roboto", sans-serif;
    font-size: 13pt;
    width: 130pt;
    color:rgb(237, 237, 237);
    text-align: center;
    margin: 10pt;
    padding: 5pt;
  }
  
  .inputfile {
      width: 0.1px;
      height: 0.1px;
      opacity: 0;
      overflow: hidden;
      position: absolute;
      z-index: -1;
  }
  
.inputfile + label {
    display: inline-block;
    width: 200px;
    height: 45px;
    font-family: 'Roboto', sans-serif;
    font-size: 11px;
    text-transform: uppercase;
    letter-spacing: 2.5px;
    font-weight: 500;
    color: rgb(5, 5, 5);
    background-color: #fff;
    border: none;
    border-radius: 45px;
    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
    transition: all 0.3s ease 0s;
    cursor: pointer;
    outline: none;
    margin-left: 10px;
    text-align: center;
    line-height: 45px;
}
  
.inputfile:focus + label,
.inputfile + label:hover {
      background-color: #4d23d7;
    box-shadow: 0px 15px 20px rgba(89, 46, 229, 0.4);
    color: rgb(33, 0, 131);
    transform: translateY(-3px);
}
  
.buttons {
    width: 100px;
    height: 45px;
    font-family: 'Roboto', sans-serif;
    font-size: 11px;
    text-transform: uppercase;
    letter-spacing: 2.5px;
    font-weight: 500;
    color: #000;
    background-color: #fff;
    border: none;
    border-radius: 45px;
    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
    transition: all 0.3s ease 0s;
    cursor: pointer;
    outline: none;
    margin-left: 10px;
}
  
  #comp {
    width: 140px;
  }
  
  .buttons:hover {
    background-color: #9c65e0;
    box-shadow: 0px 15px 20px rgba(235, 188, 255, 0.4);
    color: rgb(9, 4, 68);
    transform: translateY(-3px);
  }
  
  body {
    background-color: #2a005b;
    padding: 0;
    margin: 0;
    width: 100%;
  }
  
  main {
    float: left;
    margin: 2em 0em 2em 5em;
    padding: 1em 2.5em 1em 2.5em;
    max-width: 52%;
  }
  
  aside {
    float: right;
    margin: 2em 5em 2em 0em;
    padding: 1em 2.5em 1em 2.5em;
    margin-left: 0px;
    max-width: 35%;
    height: 50%;
  }
  
  main, aside {
    display: block;
    box-sizing: border-box;
    width: 90%;
    line-height: 1.5;
    color: #333;
    background-image: linear-gradient(to right, #2278FB, #6BDFDB);
    border-radius: 0.5em;
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    transition: all 0.3s ease-in-out;
  }
  
  main:hover, aside:hover {
    transform: scale(1.1);
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
  }
  
  
  #hello {
    line-height: 1.2;
  }

